[project]
name = "agents-with-langchain"
version = "0.1.0"
description = "\"Agents with LangChain and LangGraph\""
authors = [
    {name = "Gaspar Acevedo",email = "acevedo.zain.gaspar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "langchain-core (>=1.0.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
